test/tests/MissingInnerClass.expected
MissingInnerClass.panda:2:16: error: unknown type 'Object.NotFound'
1 error
