test/tests/MissingInnerClass.panda
class MissingInnerClass {
    method m(o:Object.NotFound) {
    }
}